k8s/dashdot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashdot
  namespace: monitoring
  labels:
    app: dashdot
    kubernetes.io/name: "dashdot"
spec:
  type: NodePort
  ports:
    - name: dashdot
      port: 3001
      targetPort: 3001
      nodePort: 30016
  selector:
    app: dashdot
