k8s/dashdot/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashdot-ingress
  namespace: monitoring
spec:
  rules:
    - host: dashdot.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashdot
                port:
                  number: 3001
